[package]
name = "fs9p"
version = "0.1.1"
edition = "2024"
description = "A 9P client library for Rust."
license = "Apache-2.0"
repository = "https://github.com/kylin-x-kernel/fs9p"
homepage = "https://github.com/kylin-x-kernel/fs9p"
authors = ["Debin <luodeb@outlook.com>"]

[dependencies]
log = { version = "0.4", default-features = false }
